// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader accepts color value 1`] = `
<div>
  <svg
    class="sc-bcXHqe gAOCvb"
    height="50"
    viewBox="25 25 50 50"
    width="50"
  >
    <circle
      class="sc-gswNZR jyoBiI"
      color="success"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke-width="4"
    />
    <circle
      class="sc-dkrFOg fOHjOE"
      color="success"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke-dasharray="60"
      stroke-dashoffset="-50"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;

exports[`Loader it renders 1`] = `
<div>
  <svg
    class="sc-bcXHqe gAOCvb"
    height="50"
    viewBox="25 25 50 50"
    width="50"
  >
    <circle
      class="sc-gswNZR wgAJW"
      color="primary"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke-width="4"
    />
    <circle
      class="sc-dkrFOg fbUUUL"
      color="primary"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke-dasharray="60"
      stroke-dashoffset="-50"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
</div>
`;
